# salary-analyzer

./: .env.example  hh.py  main.py  pyproject.toml  readme.md  salary.py  superjob.py
